2010-05-04	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/sbin/pfsetvlan, pf/t/all.t, pf/t/pfsetvlan.t: Now parsing new
	Net-SNMP 5.4 traplog format. Fixes #940;
	Took the opportunity to do it cleanly with a compiled and re-used regexp
	that is full of comments.
	Now testing the various traplog format in t/pfsetvlan.t.
	Thanks to Maikel for the report and regexp draft.

	* pf/conf/dhcp_fingerprints.conf: Re-labeled some devices to avoid 
	problems with VoIP autodetection. Fixes #896;
	http://www.packetfence.org/bugs/view.php?id=896

	* pf/sbin/pfdhcplistener: Reduced DHCP logging at INFO level. Now we 
	are only logging ACK / OFFER / INFORM and I consolidated fingerprint
	and node modification messages.

	* pf/lib/pf/node.pm: Fixed a couple of issues with node category 
	support I encountered:
	- One crasher (missing sub because of a bad merge) 
	- Fixed a bug where a missing category would always result in an error
	- Fixed an unnecessary warning on node_modify

	* pf/conf/ui.conf: Renamed VLAN to Alternate dest. VLAN makes its
	purpose clearer. Fixes #927;
	http://www.packetfence.org/mantis/view.php?id=927

	* pf/docs/PacketFence_Administration_Guide.odt: Added two paragraph to
	the admin guide under MySQL optimizations: 
	- Avoid 'Too many connections' problems
	- Avoid 'Host <hostname> is blocked' problems
	Fixes #951;
	http://www.packetfence.org/mantis/view.php?id=951

	* pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php: VoIPEnabled parameter
	is now a Yes/No dropdown instead of an input text. Fixes #952;
	Also took the opportunity to turn the whole thing into a switch/case
	http://www.packetfence.org/mantis/view.php?id=952

	* pf/bin/pfcmd: Not saying 'Command not understood' anymore if no 
	command was passed to pfcmd. Fixes #972;
	http://www.packetfence.org/mantis/view.php?id=972

	* pf/TODO: dropping TODO in favor of tracking everything in our
	public bugtracker
